# fastapi_tutorial

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml
app/: main.py
app/config/: config.py
app/db/: db.py
app/internal/models/: hero.py
app/routes/: body.py  path.py  query.py  query_params_str_validations.py
