[project]
name = "fastapi-tutorial"
version = "0.1.0"
description = "following fastapi tutorial for 김세연"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[all,standard]>=0.129.0",
    "psycopg2-binary>=2.9.11",
    "psycopg[binary]>=3.3.3",
    "pydantic-settings>=2.13.0",
    "sqlmodel>=0.0.34",
]
